--- a/AplikacijaZaZeljeznickuStanicuDRAOS2/lang.de.resx
+++ b/AplikacijaZaZeljeznickuStanicuDRAOS2/lang.de.resx
@@ -117,7 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BrojPutnika" xml:space="preserve">
+    <value>Zahl der Passagiere</value>
+  </data>
+  <data name="Dolazak" xml:space="preserve">
+    <value>Ankunft</value>
+  </data>
+  <data name="Engleski" xml:space="preserve">
+    <value>Englisch</value>
+  </data>
+  <data name="groupUnosDIV" xml:space="preserve">
+    <value>Die Eingabe von Datum und Uhrzeit Reise</value>
+  </data>
+  <data name="groupUnosPodataka" xml:space="preserve">
+    <value>Dateneingabe</value>
+  </data>
+  <data name="helpSadrzajKorak1" xml:space="preserve">
+    <value>In Form von Schritt 1 können Sie Fahrpläne sehen</value>
+  </data>
+  <data name="helpSadrzajKorak2" xml:space="preserve">
+    <value>In Form von Schritt 2 können Sie die Daten auf dem gewünschten Ziel eingeben</value>
+  </data>
+  <data name="helpSadrzajKorak3" xml:space="preserve">
+    <value>In Form von Schritt 3 können Sie die Uhrzeit, das Datum und die Klasse ein, mit dem Sie reisen möchten</value>
+  </data>
+  <data name="helpSadrzajKorak4" xml:space="preserve">
+    <value>In Form von Schritt 4 zeigt das Verfahren von Zahlungskarten</value>
+  </data>
+  <data name="helpSadrzajKupiKartu" xml:space="preserve">
+    <value>Klicken Sie auf ein Ticket kaufen zum nächsten Schritt zu wechseln</value>
+  </data>
+  <data name="Klasa" xml:space="preserve">
+    <value>Klasse</value>
+  </data>
+  <data name="KupiKartu" xml:space="preserve">
+    <value>Kaufen Sie ein Ticket</value>
+  </data>
+  <data name="Naprijed" xml:space="preserve">
+    <value> Vorwärts</value>
+  </data>
+  <data name="Njemacki" xml:space="preserve">
+    <value>Deutsch</value>
+  </data>
+  <data name="PolazakIz" xml:space="preserve">
+    <value>Ausgehend von</value>
+  </data>
+  <data name="Ponisti" xml:space="preserve">
+    <value>Stornieren</value>
+  </data>
   <data name="TEST" xml:space="preserve">
     <value>?test DE</value>
+  </data>
+  <data name="TEST1" xml:space="preserve">
+    <value>?test Nur Ankünfte und Abflüge in der nächsten 2 Stunden</value>
+  </data>
+  <data name="Turski" xml:space="preserve">
+    <value>Türkisch</value>
+  </data>
+  <data name="VrijemeDolaska" xml:space="preserve">
+    <value>Ankunftszeit</value>
+  </data>
+  <data name="VrijemePolaska" xml:space="preserve">
+    <value>Abfahrtszeit</value>
+  </data>
+  <data name="VrstaKarte" xml:space="preserve">
+    <value>Typ Karten</value>
   </data>
 </root>
