--- a/AplikacijaZaZeljeznickuStanicuDRAOS2/lang.resx
+++ b/AplikacijaZaZeljeznickuStanicuDRAOS2/lang.resx
@@ -124,7 +124,7 @@
     <value>In the form of step 2, you can enter data on the desired destination</value>
   </data>
   <data name="TEST" xml:space="preserve">
-    <value>?testdefault</value>
+    <value>Arrivals and departures in the next 2 hours</value>
   </data>
   <data name="BrojPutnika" xml:space="preserve">
     <value>Number of passengers</value>
@@ -179,5 +179,29 @@
   </data>
   <data name="VrstaKarte" xml:space="preserve">
     <value>Ticket type</value>
+  </data>
+  <data name="DatumPolaska" xml:space="preserve">
+    <value>Date od departure</value>
+  </data>
+  <data name="Korak1" xml:space="preserve">
+    <value>Step 1</value>
+  </data>
+  <data name="Korak2" xml:space="preserve">
+    <value>Step 2</value>
+  </data>
+  <data name="Korak3" xml:space="preserve">
+    <value>Step 3</value>
+  </data>
+  <data name="Korak4" xml:space="preserve">
+    <value>Step 4</value>
+  </data>
+  <data name="Pojedinacna" xml:space="preserve">
+    <value>One person</value>
+  </data>
+  <data name="Porodicna" xml:space="preserve">
+    <value>Family</value>
+  </data>
+  <data name="String1" xml:space="preserve">
+    <value />
   </data>
 </root>
